# megachat-networklib-common

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: bytebuffer.h  chatconnection.h  chatpacketbuilder.h  eventmanager.h  exeption.h  hostaddress.h  ipaddress.h  structuser.h  tcpconnection.h  tcplistener.h  tcpsocket.h  test.h
include/exceptions/: eventmanagerexception.h  exception.h  ipaddressexception.h  tcpsocketexception.h
include/interface/: ithrowable.h
include/interfaces/: ibyteconnection.h  ibyteconnectionlistener.h  ichatconnection.h  ichatconnectionlistener.h  itcpconnection.h  itcpconnectionlistener.h  itcplistener.h  itcplistenerlistener.h
src/: CMakeLists.txt  bytebuffer.cpp  chatconnection.cpp  chatpacketbuilder.cpp  eventmanager.cpp  exeption.cpp  hostaddress.cpp  ipaddress.cpp  tcpconnection.cpp  tcplistener.cpp  tcpsocket.cpp  test.cpp
test/: Makefile  test1  test1.cpp
tests/: CMakeLists.txt  test1.cpp  test_async_listener.cpp  test_async_request.cpp  test_bytebuffer.cpp  test_chatconnection.cpp  test_ipaddress.cpp  test_packet_building.cpp  test_socket_connect.cpp  testconnect.cpp  testipaddress.cpp  testrunner.cpp
